--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ socket2 = { version = "0.3.9", features = ["reuseport"] }
 mio = "^0.6"
 chrono = "0.4.6"
 rustls = "0.15.2"
+docopt = "~1.0"
+serde_derive = "1.0"
+serde = "1.0"
